added: zipcode validation, display city

--- a/website/index.html
+++ b/website/index.html
@@ -8,15 +8,15 @@
     <body>
         <div class="container">
             <div id="header">Weather Journal</div>
-            <div class="form">
+            <form class="form">
                 <label for="zip">Zip code : </label><br>
-                <input id="zip" placeholder="Enter zip code here ..."><br><br>
+                <input id="zip" placeholder="Enter 5 digit zip code here ..." minlength="5" maxlength="5" required><span id="errMsg"></span><br><br>
                 <label for="feelings" >Comments : </label><br>
                 <textarea id="feelings" rows="4" cols="50"></textarea><br>
                 <button id="generate">GO</button>
-            </div>
+            </form>
             <div id="entryHolder">
-                <p id="intro">Your weather ...</p>
+                <span id="intro"></span><span id=city></span>
                 <div class="output" id="date"></div>
                 <div class="output" id="temp"></div>
                 <div class="output" id="content"></div>
